# rssify

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/adapters/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/adapters/cli/src/: lib.rs  log.rs  main.rs  pipeline.rs  repo_fs.rs  repo_selector.rs  spec.rs  stats.rs  store.rs
crates/adapters/cli/src/repo_sqlite/: entries.rs  feeds.rs  mod.rs  schedule.rs  schema.rs
crates/adapters/cli/tests/: cli.rs  cli_repo_flag.rs  integration_fetch.rs  pipeline.rs  pipeline_fetch.rs  pipeline_load.rs  repo_fs.rs  repo_fs_path.rs  repo_sqlite_roundtrip.rs  seed_parsing.rs  spec.rs  stats_fs.rs  store_env.rs  support.rs
crates/adapters/cli/tests/testdata/: feeds_min.json
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/src/: domain.rs  error.rs  ids.rs  lib.rs  model.rs  repo.rs  sched.rs  type.rs
crates/core/src/id_policy/: mod.rs
crates/core/src/scheduler/: decide.rs  mod.rs
crates/core/tests/: domain.rs  golden_ids.rs  id_policy_golden.rs  ids.rs  repo_trait.rs  sched.rs  scheduler_decide.rs  support.rs
crates/core/tests/fixtures/id_policy/: golden.jsonl
crates/core/tests/testdata/: entries_min.csv
crates/repos/fs/: CHANGELOG.md  Cargo.toml
crates/repos/fs/src/: entry_impl.rs  feed_impl.rs  lib.rs  repo.rs  repo_impl.rs  schedule_impl.rs  tx.rs  util.rs
crates/repos/fs/tests/: roundtrip.rs
docs/: AI-FRIENDLY.md  ALL.md  ARCHITECTURE.md  CLI_SURFACE.md  CONTRIBUTING.md  HEADER.txt  ID_POLICY.md  LOG_KEYS.md  PHASE1_SCOPE.md  REPOSITORIES.md  ROADMAP.md  SCHEDULER.md  phase.md
docs/ai/: AI-FRIENDLY.md  AI-PHASE-LOG.md  CODEX.md  FRIENDLY.md  PHASE-LOG.md  PHASE-PROMPT.md
nix/: devshell.nix  formatter.nix
nix/apps/: default.nix
nix/conf/: name.nix  rust.nix
nix/data/: cmd.nix  env.nix  libs.nix
nix/data/libs/: build.nix  dev.nix  pkg.nix  run.nix
nix/dev/: build.nix  fish.nix  shell.nix
nix/funcs/: buildEnv.nix  fmtPkg.nix  makeLibraryPath.nix  mkPkgConfigPath.nix
scripts/: check_headers.py  check_loc.py
