[workspace]
members = ["crates/core", "crates/adapters/cli"]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "CC0-1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
description = "RSS toolkit"
repository = "https://github.com/sguzman/rssify"
keywords = ["rss", "cli"]
categories = ["rss"]
readme = "README.md"

[workspace.metadata]
name = "rssify"

[workspace.metadata.release]
shared-version = true
dependent-version = "upgrade"
allow-branch = ["main"]
tag-name = "v{{version}}"
tag-message = "chore(release): v{{version}}"
pre-release-commit-message = "chore(release): v{{version}}"
consolidate-commits = true
push = false
publish = false
sign-tag = false
pre-release-hook = ["sh", "-c", '''
  set -e
  git-cliff --tag "v{{version}}" -o CHANGELOG.md
  git add CHANGELOG.md
''']

[workspace.dependencies]
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true
codegen-units = 256
debug = true
lto = "off"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
