[package]
name = "rssify-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
# Give core its own description/keywords to be precise:
description = "Core domain types and trait seams for rssify"
keywords = ["rss", "library"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
