[package]
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
categories = ["rss"]
description = "RSS toolkit CLI"
edition = "2024"
keywords = ["rss", "cli"]
license = "CC0-1.0"
name = "rssify"
readme = "../../../README.md"
repository = "https://github.com/sguzman/rssify"
version = "0.3.2"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rssify-core = { path = "../../core" }
