# crates/adapters/cli/Cargo.toml

[[bin]]
name = "rssify"
path = "src/main.rs"

[package]
name = "rssify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rssify-core = { path = "../../core" }
