[package]
name = "rssify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "rssify"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rssify-core = { path = "../../core" }
rssify-repo-fs = { path = "../../repos/fs" }
