# crates/repos/fs/Cargo.toml

[package]
name = "rssify-repo-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Filesystem repository adapter for rssify"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rssify-core = { path = "../../core" }
