# File: crates/repos/fs/Cargo.toml
[package]
name = "rssify-repo-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Filesystem adapter for rssify (Phase 2)"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
